# hpp-ipa

./: .gitignore  CMakeLists.txt  ipa-tutorial.py  ipa-tutorial1.py  ipa-tutorial2.py  package.xml
meshes/: Door_m.STL  Mobile_Platform_Shell_m.STL  Tool_Gripper_Shell_m.STL  Tools_Screwdriver_Shell_m.STL  Tools_to_Tool_Changer_m.STL
src/: CMakeLists.txt
src/hpp/corbaserver/hpp_dlr_ipa/: __init__.py  robot.py
src/hpp/corbaserver/hpp_ipa/: __init__.py  robot.py
src/hpp/corbaserver/manipulation/hpp_dlr_ipa/: __init__.py  robot.py
src/hpp/corbaserver/manipulation/hpp_ipa/: __init__.py  robot.py
srdf/: door.srdf  ipa325_ur10_empty.srdf  ipa325_ur10_gripper.srdf  ipa325_ur10_screwdriver.srdf
urdf/: door.urdf.xacro  ipa325_ur10.urdf.xacro  ipa325_ur10_empty.urdf.xacro  ipa325_ur10_gripper.urdf.xacro  ipa325_ur10_screwdriver.urdf.xacro  platform.urdf.xacro  tool_changer.urdf.xacro  tool_gripper.urdf.xacro  tool_screwdriver.urdf.xacro
